# armor

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  armor.cabal  default.nix
src/: Armor.hs
test/: AppA.hs  AppA.lhs  AppB.hs  AppB.lhs  Main.hs  TestAppA.lhs  TestAppB.lhs
