name:                armor
version:             0.1
synopsis:            Armor your data structures against serialization backwards compatibility problems
description:         Tests the serialization backwards compatibility of data types by storing
                     serialized representations in .test files to be checked into your project's
                     version control.
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          doug@takt.com
copyright:           Takt Inc.
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Armor

  hs-source-dirs:      src
  ghc-options: -Wall
  build-depends:
    HUnit      >= 1.5  && < 1.7,
    base       >= 4.9  && < 4.10,
    bytestring >= 0.10 && < 0.11,
    containers >= 0.5  && < 0.6,
    directory  >= 1.3  && < 1.4,
    filepath   >= 1.4  && < 1.5,
    lens       >= 4.15 && < 4.16

  default-language:    Haskell2010

test-suite testsuite
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Main.hs

  ghc-options: -Wall
  build-depends:
    HUnit,
    aeson        >= 1.0 && < 1.3,
    armor,
    base,
    bytestring,
    containers,
    directory,
    hspec        >= 2.4 && < 2.5,
    lens,
    text         >= 1.2 && < 1.3

  default-language:    Haskell2010
