name:                armor
version:             0.1
synopsis:            Armor data structures against serialization backwards compatibility problems
description:         Tests the serialization backwards compatibility of data types by storing
                     serialized representations in .test files to be checked into your project's
                     version control.
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley, Formation Inc.
homepage:            https://github.com/mightybyte/armor
bug-reports:         https://github.com/mightybyte/armor/issues
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.1,
  GHC==8.4.1

Source-repository head
  Type:     git
  Location: https://github.com/mightybyte/armor.git

library
  exposed-modules:
    Armor

  hs-source-dirs:      src
  ghc-options: -Wall
  build-depends:
    HUnit      >= 1.5  && < 1.7,
    base       >= 4.6  && < 4.12,
    bytestring >= 0.10 && < 0.11,
    containers >= 0.5  && < 0.6,
    directory  >= 1.2  && < 1.4,
    filepath   >= 1.4  && < 1.5,
    lens       >= 4.16 && < 4.17

  default-language:    Haskell2010

test-suite testsuite
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    AppA
    AppB
    TestAppA
    TestAppB

  ghc-options: -Wall
  build-depends:
    HUnit,
    aeson        >= 1.0 && < 1.3,
    armor,
    base,
    bytestring,
    containers,
    directory,
    hspec        >= 2.4 && < 2.5,
    lens,
    text         >= 1.2 && < 1.3

  default-language:    Haskell2010
