name:                armor
version:             0.2
synopsis:            Prevent serialization backwards compatibility problems using golden tests
description:         Tests the serialization backwards compatibility of data types by storing
                     serialized representations in .test files to be checked into your project's
                     version control.
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley, Formation Inc.
homepage:            https://github.com/mightybyte/armor
bug-reports:         https://github.com/mightybyte/armor/issues
category:            Data,Testing
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.3,
  GHC==8.8.3,
  GHC==8.10.1,
  GHC==9.0.1

extra-source-files:
  default.nix
  README.md

Source-repository head
  Type:     git
  Location: https://github.com/mightybyte/armor.git

library
  exposed-modules:
    Armor

  hs-source-dirs:      src
  ghc-options: -Wall
  build-depends:
    HUnit      >= 1.5  && < 1.7,
    base       >= 4.6  && < 4.16,
    bytestring >= 0.10 && < 0.12,
    containers >= 0.5  && < 0.7,
    directory  >= 1.2  && < 1.4,
    filepath   >= 1.4  && < 1.5,
    hashable   >= 1.3  && < 1.4,
    lens       >= 4.16 && < 5.1

  default-language:    Haskell2010

test-suite testsuite
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Main.hs

  other-modules:
    AppA
    AppB
    TestAppA
    TestAppB

  ghc-options: -Wall
  build-depends:
    HUnit,
    aeson        >= 1.0 && < 1.6,
    armor,
    base,
    bytestring,
    containers,
    directory,
    hspec        >= 2.4 && < 2.8,
    lens,
    text         >= 1.2 && < 1.3

  default-language:    Haskell2010
